--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -14,36 +14,50 @@
         tools:context=".views.AboutActivity">
 
         <!-- Title Section -->
-        <LinearLayout
-            android:id="@+id/section_titles"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/txt_ActivityTitle"
+            style="@style/Heading1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="24dp"
+            android:text="@string/txtAboutTitle"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/txt_activityTitle"
-                style="@style/Heading1"
-                android:layout_width="wrap_content"
+        <!-- Main information section -->
+        <ScrollView
+            android:id="@+id/group_info"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
 
-                android:layout_height="wrap_content"
-                android:text="About the app" />
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/txt_ActivityTitle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                style="@style/TextViewText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="This app was produced by DannyWeston (psydw2) for his MDP coursework 3."
-                android:layout_marginBottom="10dp"/>
-
-            <TextView
-                style="@style/TextViewText"
+            <LinearLayout
+                android:id="@+id/section_titles"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="It involves functionality for tracking the distance and duration a run is completed by a user."/>
-        </LinearLayout>
+                android:orientation="vertical"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    style="@style/TextViewText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/txtAboutSection1" />
+
+                <TextView
+                    style="@style/TextViewText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/txtAboutSection2" />
+            </LinearLayout>
+
+        </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
