--- a/app/src/main/res/layout/activity_running.xml
+++ b/app/src/main/res/layout/activity_running.xml
@@ -10,84 +10,67 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/ContentSpacing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/ContentSpacing"
         tools:context=".views.MainActivity">
 
         <!-- Title Section -->
-        <LinearLayout
-            android:id="@+id/section_titles"
+        <TextView
+            android:id="@+id/txt_ActivityTitle"
+            style="@style/Heading1"
+
+            android:text="@string/txt_ActiveRunTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
 
+            android:textAlignment="center"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
-            <TextView
-                android:id="@+id/txt_activityTitle"
-                style="@style/Heading1"
-                android:text="Run"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                app:drawableStartCompat="@drawable/run_icon"
-                android:drawablePadding="15dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <!-- Content Section -->
+        <!-- Content -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:orientation="vertical"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_StopRun"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/section_titles">
+            app:layout_constraintTop_toBottomOf="@+id/txt_ActivityTitle">
 
             <TextView
-                android:id="@+id/txt_finishedRun"
-                style="@style/Heading1"
-                android:visibility='@{viewmodel.finished ? 0 : 4}'
-                android:textAlignment="center"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text='Run finished!'
-                android:layout_marginBottom="24dp"/>
-
-            <TextView
+                android:id="@+id/txt_RunDuration"
                 style="@style/Heading1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text='@{DistanceTimeUtils.MillisToClockFormat(viewmodel.elapsed)}'
-                android:layout_marginBottom="24dp"
-                android:textSize="50sp"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:textSize="50sp" />
 
             <TextView
+                android:id="@+id/txt_RunDistance"
                 style="@style/Heading1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{DistanceTimeUtils.ToMetresString(viewmodel.distance)}"
-                android:layout_marginBottom="24dp"
-                android:textSize="32sp"
-                android:textAlignment="center"/>
-
-            <Button
-                android:visibility='@{viewmodel.finished ? 4 : 0}'
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Stop"
-                android:layout_gravity="center"
-                android:onClick="@{() -> viewmodel.stopRun()}"/>
-
+                android:layout_marginTop="32dp"
+                android:text="@{viewmodel.getTravelled(viewmodel.distance)}"
+                android:textAlignment="center"
+                android:textSize="32sp" />
         </LinearLayout>
 
-
+        <!-- Stop Run Button -->
+        <Button
+            android:id="@+id/btn_StopRun"
+            style="@style/CautionButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> viewmodel.stopRun()}"
+            android:text="@string/txtStopRunButton"
+            android:visibility='@{viewmodel.finished ? 4 : 0}' />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
