--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,27 +8,72 @@
         <variable name="viewmodel" type="SettingsActivityViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/ContentSpacing"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/ContentSpacing"
         tools:context=".views.SettingsActivity">
 
-        <!-- Title Section -->
-        <LinearLayout
-            android:id="@+id/section_titles"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/txt_ActivityTitle"
+            style="@style/Heading1"
+
+            android:textAlignment="center"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+
+            android:text="@string/txtSettingsTitle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <TextView
-                android:id="@+id/txt_activityTitle"
-                style="@style/Heading1"
-                android:text="Settings"
+            app:layout_constraintTop_toTopOf="parent" />
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        <ScrollView
+            android:id="@+id/group_settings"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="20dp"
 
+            app:layout_constraintStart_toStartOf="@id/txt_ActivityTitle"
+            app:layout_constraintTop_toBottomOf="@id/txt_ActivityTitle"
+            app:layout_constraintBottom_toTopOf="@id/btnSaveSettings">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/Heading2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/txtUnitsSettingPrefix" />
+
+                    <Spinner
+                        android:id="@+id/dropdown_units"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="24dp"
+                        android:spinnerMode="dropdown"
+                        android:textSize="20sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/btnSaveSettings" />
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
+
+        <Button
+            android:id="@+id/btnSaveSettings"
+            style="@style/GreenButton"
+            android:layout_marginTop="20dp"
+            android:onClick="@{() -> viewmodel.saveSettings()}"
+            android:text="@string/txtSaveButton"
+            android:textAlignment="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
