--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -70,7 +70,7 @@
             android:id="@+id/btnSaveSettings"
             style="@style/GreenButton"
             android:layout_marginTop="20dp"
-            android:onClick="@{() -> viewmodel.saveSettings()}"
+            android:onClick="@{() -> viewmodel.btnSaveSettingsClick()}"
             android:text="@string/txtSaveButton"
             android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
